--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |key, value| %>
-  <div data-controller="flash" class="flex items-center fixed top-5 right-5 <%= classes_for_flash(key) %> py-3 px-5 rounded-lg">
+  <div data-controller="flash" class="flex items-center fixed top-5 left-5 <%= classes_for_flash(key) %> py-3 px-5 rounded-lg">
     <div class="mr-4"><%= value %></div>
 
     <button type="button" data-action="flash#dismiss">
